Trigger concourse job when pushed
Signed-off-by: Sid Sun <sid@sidsun.com>

--- a/ci/concourse.build-and-push.yaml
+++ b/ci/concourse.build-and-push.yaml
@@ -17,6 +17,7 @@ jobs:
   - name: build-and-push
     plan:
       - get: snippets-source
+        trigger: true
       - task: build-task-image
         privileged: true
         config:
